(lang dune 3.6)

(name enma)

(generate_opam_files true)

(source
 (github dipeshkaphle/enma-v2))

(authors "Dipesh Kafle")

(maintainers "Dipesh Kafle")

(license MIT)

; (documentation https://url/to/documentation)

(package
 (name enma)
 (synopsis "enmav2")
 (description "enmav2")
 (depends ocaml dune)
 )

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
